# heat_solver

./: .clang-format  CMakeLists.txt  main.c  main.cpp
